Modulo Seguridad, LotusScript de alta de usuarios y grupos

--- a/L0000_v1r1/Forms/Configuración de Correlativo.form
+++ b/L0000_v1r1/Forms/Configuración de Correlativo.form
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.0'
  replicaid='832581A1004C0C0C'>
-<noteinfo noteid='6ee' unid='81286B06CB1B52FA832581A9006E12E4' sequence='5'>
+<noteinfo noteid='6ee' unid='81286B06CB1B52FA832581A9006E12E4' sequence='6'>
 <created><datetime dst='true'>20170928T180217,96-02</datetime></created>
-<modified><datetime dst='true'>20170929T155026,42-02</datetime></modified>
-<revised><datetime dst='true'>20170928T193441,03-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20170929T155026,42-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20171005T191328,58-02</datetime></modified>
+<revised><datetime dst='true'>20171005T120733,14-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171005T191328,58-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20170929T155026,42-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
@@ -22,12 +22,12 @@ X/8QAAIADwAHAAAAAAAAAA==
 hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 </rawitemdata></item>
 <item name='$WindowTitle' sign='true'><formula>"Configuración de Correlativo"</formula></item>
+<item name='$Flags'><text>Cw</text></item>
 <item name='$DesignerVersion'><text>8.5.3</text></item>
 <item name='$Fonts'>
 <rawitemdata type='1'>
 i/8oAAEABSZWZXJkYW5hAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
 </rawitemdata></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>f.CfgCorr</text></item>
 <item name='Autores_Corr' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
@@ -44,9 +44,16 @@ i/8oAAEABSZWZXJkYW5hAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
 <rawitemdata type='0'>
 </rawitemdata></item>
 <item name='UltNroAsig_Corr' summary='false'><number>0</number></item>
-<item name='$Fields'><textlist><text>UltNroAsig_Corr</text><text>Campo_Corr</text><text
->Form_Corr</text><text>ObtCorr_Corr</text><text>Habilitar_Corr</text><text
->Autores_Corr</text></textlist></item>
+<item name='TipoDatoGuardado_Corr' placeholder='true'>
+<rawitemdata type='0'>
+</rawitemdata></item>
+<item name='EvaluateBeforeSave_Corr' placeholder='true'>
+<rawitemdata type='0'>
+</rawitemdata></item>
+<item name='$Fields'><textlist><text>EvaluateBeforeSave_Corr</text><text>TipoDatoGuardado_Corr</text><text
+>UltNroAsig_Corr</text><text>Campo_Corr</text><text>Form_Corr</text><text
+>ObtCorr_Corr</text><text>Habilitar_Corr</text><text>Autores_Corr</text></textlist></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>f.CfgCorr</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -63,46 +70,58 @@ dGUgZm9ybXVsYXJpbyBlcyBhbG1hY2VuYXIgY29uZmlndXJhY2lvbmVzIGRlIGxhIGZ1bmNpb25h
 bGlkYWQgYXNvY2lhZGEgY29uIGxhIGFzaWduYWNpom4gZGVsIG6jbWVybyBkZSBjb3JyZWxhdGl2
 byBlbiBsb3MgZG9jdW1lbnRvcyBkZSBsYSBhcGxpY2FjaaJuLgCBAoMEAgCF/wgABQEACIECgv9a
 AAQAAAAAAAAAAACgBQAAoAUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAQAAAACUhQAAAACgBQoAAAAAAAEAAAAEAAAAgwQEAN0GAQD7//v/LAAhAAAABQIAAAAAAAAA
+AAAAAQAAAACUhQAAAACgBQoAAAAAAAEAAAAEAAAAgwQEAN0GAQD7//v/LAAhAAAABgIAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAQDAwMAAAAAAAAAAXP8+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAA4AAAAAAAAAAQAACgAAAAABAAAAAADeBgEA+/+jDqAFcQA8AHEAOQADAKQSAAAR
-Bl8aGiNVAhERAQEAAIECgv9aAAUAAAAAAAAAAAAgBl8aIAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+BjAkGSNVAhERAQEAAIECgv9aAAUAAAAAAAAAAAAgBjAkIAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhwAAAAAAAAAAAAAAAAEAAAAEAAAAgwQFAIX/EQAF
-AQAISGFiaWxpdGFyAKQSAAFBGxhJZk1VAhERAQEAAIECgv9aAAYAAAAAAAAAAABQGxhJUBsAAAAA
+AQAISGFiaWxpdGFyAKQSAAESJY9oZ01VAhERAQEAAIECgv9aAAYAAAAAAAAAAAAhJY9oISUAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhwAAAAAAAAAAAAAA
 AAEAAAAEAAAAgwQGAIX/CAAFAAAI3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAeAB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACw/xQAAAAE
 IgAAAAAAAAAAAAAAAIr/RACKggAFACACAAAAAAAAAgUAAAgAAAAAAAAAAA4AAAASAEhhYmlsaXRh
-cl9Db3JyAgAGAAYAU6EgfCAxTm8gfCAw3gYAAIr/hf8IAAUAAAikEgEAEQZfGhojVQIREQEBAACB
-AoMEBQCF/yEABQEACE9idGVuY2mibiBkZWwgQ29ycmVsYXRpdm8ApBIBAUEbGElmTVUCEREBAQAA
-gQKDBAYAhf8IAAUAAAjdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALD/FAAAAAYgAAAAAAAA
-AAAAAAAAiv9qAIqCAAUAIAIAAAAAAAACBQAACAAAAAAAAAAADAAAADkAT2J0Q29ycl9Db3JyAgAb
-ABgAT2J0ZW5lciBkZSBiYXNlIGV4dGVybmEgfCAxT2J0ZW5lciBkZSBlc3RhIGJhc2UgfCAyAN4G
-AACK/4X/CAAFAAAIpBICABEGXxoaI1UCEREBAQAAgQKDBAUAhf8SAAUBAAhGb3JtdWxhcmlvpBIC
-AUEbGElmTVUCEREBAQAAgQKDBAYAhf8IAAUAAAjdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AIr/LgCKAAAFADACAAAAAAAAAgUAAAgAAAAAAAAAAAkAAAAAAEZvcm1fQ29ycgBiDgEAhAAAAAAA
-AAAAAN4GAACK/4X/CQAFAAAIIACkEgMAEQZfGhojVQIREQEBAACBAoMEBQCF/yoABQEACENhbXBv
-IGRvbmRlIGd1YXJkYXIgZWwgQ29ycmVsYXRpdm+kEgMBQRsYSWZNVQIREQEBAACBAoMEBgCF/wgA
-BQAACN0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHgAeAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv9KAIoAAAUAMAIAAAAAAAACBQAACAAA
-HAAAAAAACgAAAAAAHAAKAAQAAAAMAPsAMQFeAQMABwAKAAMACTFTAENhbXBvX0NvcnJiDgEAhAAA
-AAAAAAAAAN4GAACK/4X/CQAFAAAIIACBAoMEBgDdBgAAhf+F/0QABQAOCE5vbWJyZSBkZWwgY2Ft
-cG8gZG9uZGUgc2UgZ3VhcmRhcqAgZWwgbqNtZXJvIGRlIGNvcnJlbGF0aXZvLtIIAQCAgIAA3gYA
-AIX/pBIEABEGXxoaI1UCEREBAQAAgQKC/1oABwAAAAAAAAAAACAGXxogBgAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYJAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAAC7
-/zoABwDLAKUcYmtknywAAAAeAAUADABPYnRDb3JyX0NvcnIBAAEAMgALAgMABwAMAAUACTFTMlMA
-gwQHAIX/IwAFAQAI6Wx0aW1vIENvcnJlbGF0aXZvIEFzaWduYWRvAKQSBAFBGxhJZk1VAhERAQEA
-AIECgv9aAAgAAAAAAAAAAABQGxhJUBsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAACGCQAAAABUhwAAAAAAAAAAAAAAAAEAAAAEAAAAu/86AAgAywClHGJrZJ8sAAAAHgAF
-AAwAT2J0Q29ycl9Db3JyAQABADIACwIDAAcADAAFAAkxUzJTAIMECACF/wgABQAACN0GAACK//7/
+cl9Db3JyAgAGAAYAU6EgfCAxTm8gfCAw3gYAAIr/hf8IAAUAAAikEgEAEQYwJBkjVQIREQEBAACB
+AoMEBQCF/yYABQEACERvbmRlIHNlIGd1YXJkYSBlbCBDb3JyZWxhdGl2b6QSAQESJY9oZ01VAhER
+AQEAAIECgwQGAIX/CAAFAAAI3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAeAB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACw/xQAAAAGIAAA
+AAAAAAAAAAAAAIr/WgCKggAFACACAAAAAAAAAgUAAAgAAAAAAAAAAAwAAAApAE9idENvcnJfQ29y
+cgIAEwAQAEVuIGJhc2UgZXh0ZXJuYSB8IDFFbiBlc3RhIGJhc2UgfCAyAN4GAACK/4X/CAAFAAAI
+pBICABEGMCQZI1UCEREBAQAAgQKDBAUAhf8SAAUBAAhGb3JtdWxhcmlvpBICARIlj2hnTVUCEREB
+AQAAgQKDBAYAhf8IAAUAAAjdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/LgCKAAAFADAC
+AAAAAAAAAgUAAAgAAAAAAAAAAAkAAAAAAEZvcm1fQ29ycgBiDgEAhAAAAAAAAAAAAN4GAACK/4X/
+CQAFAAAIIACkEgMAEQYwJBkjVQIREQEBAACBAoMEBQCF/yoABQEACENhbXBvIGRvbmRlIGd1YXJk
+YXIgZWwgQ29ycmVsYXRpdm+kEgMBEiWPaGdNVQIREQEBAACBAoMEBgCF/wgABQAACN0GAACK//7/
 UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAiv80AIoAAAMAMAIAAAAAAAACBQAACAAAAAAAAAAADwAAAAAA
-VWx0TnJvQXNpZ19Db3JyAN4GAACK/4X/CAABAAAKpQYAAAAAgQKDBAIAhf8IAAUAAAiBAoMEAgCF
-/wgAAQAACoECgwQBAIX/CAABAAAK3QYAAK3/cf8rAAAAAAADABgACQAAAAAAAAAAAAAAAAAAAAAA
-AAAAAHNmLkRlZkFjYwCt/0IADgAIAAAANgBBY2Npb25lcyBwb3IgRGVmZWN0byBlbiBGb3JtdWxh
-cmlvcyBOb3RlcyB8c2YuRGVmQWNjAACuAt4GAACuAIX/CAABAAAKgQKDBAQAhf8IAAEAAAo=
-</rawitemdata></item>
-<item name='$Flags'><text>Cw</text></item></note>
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAiv9KAIoAAAUAMAIAAAAAAAACBQAACAAAHAAAAAAACgAAAAAA
+HAAKAAQAAAAMAPsAMQFeAQMABwAKAAMACTFTAENhbXBvX0NvcnJiDgEAhAAAAAAAAAAAAN4GAACK
+/4X/CQAFAAAIIACBAoMEBgDdBgAAhf+F/0QABQAOCE5vbWJyZSBkZWwgY2FtcG8gZG9uZGUgc2Ug
+Z3VhcmRhcqAgZWwgbqNtZXJvIGRlIGNvcnJlbGF0aXZvLtIIAQCAgIAA3gYAAIX/pBIEABEGMCQZ
+I1UCEREBAQAAgQKC/1oABwAAAAAAAAAAACAGMCQgBgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAIYJAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAAC7/zoABwBzAKUcFWuY
+MiwAAAAeAAUADABPYnRDb3JyX0NvcnIBAAEAMgALAgMABwAMAAUACTFTMlMAgwQHAIX/IwAFAQAI
+6Wx0aW1vIENvcnJlbGF0aXZvIEFzaWduYWRvAKQSBAESJY9oZ01VAhERAQEAAIECgv9aAAgAAAAA
+AAAAAAAhJY9oISUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGCQAA
+AABUhwAAAAAAAAAAAAAAAAEAAAAEAAAAu/86AAgAcwClHBVrmDIsAAAAHgAFAAwAT2J0Q29ycl9D
+b3JyAQABADIACwIDAAcADAAFAAkxUzJTAIMECACF/wgABQAACN0GAACK//7/UAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAiv80AIoAAAMAMAIAAAAAAAACBQAACAAAAAAAAAAADwAAAAAAVWx0TnJvQXNpZ19D
+b3JyAN4GAACK/4X/CAABAAAKpBIFABEGMCQZI1UCEREBAQAAgQKDBAcAhf8sAAUBAAhUaXBvIGRl
+IGRhdG8gZ3VhcmRhZG8gZW4gRm9ybXVsYXJpby6BAoMEBwCF/z8ABQEACFNpIGVsIHRpcG8gZGUg
+ZGF0byBlcyB0ZXh0byBoYWNlIHVuIGV2YWx1YXRlIGRlbCBjYW1wbyAApBIFARIlj2hnTVUCEREB
+AQAAgQKDBAgAhf8IAAUBAAjdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALD/FAAAAAIAAAAA
+AAAAAAAAAAAAiv9qAIoCAAUAMAIAAAAAAAACBQAACAAAAAAAAAAAFQAAADEAVGlwb0RhdG9HdWFy
+ZGFkb19Db3JyAwAJAAwAFABUZXh0byB8IFROdW2CcmljbyB8IE5TaW1wbGUgcHJlY2lzaaJuIHwg
+U94GAACK/4X/CAAFAQAIgQKC/1oACQAAAAAAAAAAACElj2ghJQAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYJAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAAC7/0QACQBz
+AKUcFWuYMjYAAAAoAAUAFQBUaXBvRGF0b0d1YXJkYWRvX0NvcnIAAQABAFQACwIDAAcADAAFAAkx
+UzJTAIMECQCF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv88AIoAAAUAMAIA
+AAAAAAACBQAACAAAAAAAAAAAFwAAAAAARXZhbHVhdGVCZWZvcmVTYXZlX0NvcnIAYg4BAIQAAAAA
+AAAAAADeBgAAiv+F/wkABQAACCAApQYAAAAAgQKDBAIAhf8IAAUAAAiBAoMEAgCF/wgAAQAACoEC
+gwQBAIX/CAABAAAK3QYAAK3/cf8rAAAAAAADABgACQAAAAAAAAAAAAAAAAAAAAAAAAAAAHNmLkRl
+ZkFjYwCt/0IADgAIAAAANgBBY2Npb25lcyBwb3IgRGVmZWN0byBlbiBGb3JtdWxhcmlvcyBOb3Rl
+cyB8c2YuRGVmQWNjAACuAt4GAACuAIX/CAABAAAKgQKDBAQAhf8IAAEAAAo=
+</rawitemdata></item></note>
 
