--- a/L0000_v1r1/Forms/$$ViewTemplateDefault.form
+++ b/L0000_v1r1/Forms/$$ViewTemplateDefault.form
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.0'
  replicaid='832581A1004C0C0C'>
-<noteinfo noteid='702' unid='FFBF5CA761B4EFF8832581A900724144' sequence='10'>
+<noteinfo noteid='702' unid='FFBF5CA761B4EFF8832581A900724144' sequence='11'>
 <created><datetime dst='true'>20170928T184758,12-02</datetime></created>
-<modified><datetime dst='true'>20170929T155026,52-02</datetime></modified>
-<revised><datetime dst='true'>20170928T195503,58-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20170929T155026,52-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20171005T191328,84-02</datetime></modified>
+<revised><datetime dst='true'>20171005T120733,11-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171005T191328,84-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20170929T155026,52-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
@@ -19,13 +19,6 @@ hhgBAIAAAAAAgAAAAQABAP///wAAAAAA
 </rawitemdata></item>
 <item name='$HTMLBodyTag' sign='true'><formula>"bgColor=#ffffff leftMargin=0  text=#000000 topMargin=0 marginheight='0' marginwidth='0'"</formula></item>
 <item name='$Flags'><text/></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>$$ViewTemplateDefault</text></item>
-<item name='$Body' sign='true'>
-<rawitemdata type='1'>
-gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8VAAEAAApOYWRhIHBhcmEg
-dmVyAA==
-</rawitemdata></item>
 <item name='$V5ACTIONS' sign='true'>
 <rawitemdata type='1'>
 vRw/AAAAAQABAAAAAQAAAAAAAAAAAAAACAACAHn/bAABAPDw8AABAAAAAAAJAAAAAAABAPDw8AAA
@@ -47,5 +40,12 @@ AJ0BAAAFAAAAAAAAAF9PcGVuABIADn2+/yIAAAAFAAAAnQEAAAgAAAAAAAAAQm9va21hcmsTAB59
 </rawitemdata></item>
 <item name='$PublicAccess' sign='true'><text>1</text></item>
 <item name='$TITLE' sign='true'><text>$$ViewTemplateDefault</text></item>
-<item name='$DesignerVersion' sign='true'><text>8.5.3</text></item></note>
+<item name='$DesignerVersion' sign='true'><text>8.5.3</text></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>$$ViewTemplateDefault</text></item>
+<item name='$Body' sign='true'>
+<rawitemdata type='1'>
+gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8VAAEAAApOYWRhIHBhcmEg
+dmVyAA==
+</rawitemdata></item></note>
 
