--- a/ada_config_v1r1/Forms/dataSource.form
+++ b/ada_config_v1r1/Forms/dataSource.form
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.0'
  replicaid='832581A1004F6F08'>
-<noteinfo noteid='146' unid='919E16A9EB8197438325819F00510F5D' sequence='3'>
+<noteinfo noteid='146' unid='919E16A9EB8197438325819F00510F5D' sequence='6'>
 <created><datetime dst='true'>20170918T124523,49-02</datetime></created>
-<modified><datetime dst='true'>20170920T122738,23-02</datetime></modified>
-<revised><datetime dst='true'>20170919T100501,43-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20170920T122738,23-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20171005T165642,54-02</datetime></modified>
+<revised><datetime dst='true'>20171005T165642,53-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171005T165642,54-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20170920T122738,23-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
@@ -28,7 +28,6 @@ hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 <rawitemdata type='1'>
 i/8oAAEABSZWZXJkYW5hAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
 </rawitemdata></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>f.CfgOpt</text></item>
 <item name='tipo' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
@@ -102,6 +101,37 @@ AAAAAAAAAAA=
 >ds_LectPass_des</text><text>ds_LectUser_des</text><text>ds_Puerto_nro</text><text
 >ds_JdbcUrl_des</text><text>ds_DataSource_des</text><text>ds_Con_cod</text><text
 >ds_Nombre_des</text><text>tipo</text></textlist></item>
+<item name='$V5ACTIONS' sign='true'>
+<rawitemdata type='1'>
+vRwRAAAAAQABAAAAAQAAAAAAAAAAAAAACAAAAHn/bAABAOzp2AABAAAAAAAJAAAAAAABAOzp2AAA
+AB8AAAAAAAAAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPz/OgAAAAAAAQAAAAAAAQAAAAAAAAAAAAwAAAAAAAAAAAAA
+AAAAAAAAAAEAAAAAAAAAAAAAAAAAAAC+/2AAAAABAC0AngEBAAUAAAABAAAAQXl1ZGEARAADABYA
+CABkc3BBeXVkYQEAAQAxAAMABwAOAAcACTFTMlMzUwAAABIAAgBeGwAAAAAAAO0BAwAHAAwABQAJ
+MFIxUwBf/xAAAgAMAAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAAAF//EAACAAIABwAAAAAAAABf/xAA
+AgALAAcAAAAAAAAAX/8QAAIAFAAHAAAAAAAAAF//EAACAAkABwAAAAAAAABf/xAAAgAIAAcAAAAA
+AAAAX/8QAAIACgAHAAAAAAAAAF//EAACAAMABwAAAAAAAABf/xAAAgAGAAcAAAAAAAAAX/8QAAIA
+BwAHAAAAAAAAAF//EAACAAUABwAAAAAAAABf/xAAAgAEAAcAAAAAAAAAvv9iAAAAAQAAAJIBEQAI
+AAAAAgAAAENhbmNlbGFyRAADABoACwBTYXZlT3B0aW9ucwABAAEAMAADAAcADAAFAAkxUzNTAAAA
+EgACAPwRAAAAAAAA7QEDAAcACgADAAkwUgD2/y8AAAAAAAMAEwANAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAYWN0X2Nsb3NlLmdpZj9f/xAAAgAMAAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAAAF//EAACAAIA
+BwAAAAAAAABf/xAAAgALAAcAAAAAAAAAX/8QAAIAFAAHAAAAAAAAAF//EAACAAkABwAAAAAAAABf
+/xAAAgAIAAcAAAAAAAAAX/8QAAIACgAHAAAAAAAAAF//EAACAAMABwAAAAAAAABf/xAAAgAGAAcA
+AAAAAAAAX/8QAAIABwAHAAAAAAAAAF//EAACAAUABwAAAAAAAABf/xAAAgAEAAcAAAAAAAAAvv9Y
+AAAAAQAFAI4AAQAGAAAAAwAAAEVkaXRhcjwACAASAAIA6AcAAAAAAADtAQMABwAMAAUACTBTMEUA
+AAASAAIAixMAAAAAAADtAQMABwAKAAMACTBSAF//EAACAAwABwAAAAAAAABf/xAAAgABAAcAAAAA
+AAAAX/8QAAIAAgAHAAAAAAAAAF//EAACAAsABwAAAAAAAABf/xAAAgAUAAcAAAAAAAAAX/8QAAIA
+CQAHAAAAAAAAAF//EAACAAgABwAAAAAAAABf/xAAAgAKAAcAAAAAAAAAX/8QAAIAAwAHAAAAAAAA
+AF//EAACAAYABwAAAAAAAABf/xAAAgAHAAcAAAAAAAAAX/8QAAIABQAHAAAAAAAAAF//EAACAAQA
+BwAAAAAAAAC+/2IAAAABAAAAkgERABAAAAAEAAAAR3VhcmRhciB5IENlcnJhcjwACAASAAIAxgsA
+AAAAAADtAQMABwAMAAUACTBTMEUAAAASAAIA/BEAAAAAAADtAQMABwAKAAMACTBSAPb/NgAAAAAA
+AwATABQAAAAAAAAAAAAAAAAAAAAAAAAAAABhY3Rfc2F2ZWFuZGNsb3NlLmdpZl//EAACAAwABwAA
+AAAAAABf/xAAAgABAAcAAAAAAAAAX/8QAAIAAgAHAAAAAAAAAF//EAACAAsABwAAAAAAAABf/xAA
+AgAUAAcAAAAAAAAAX/8QAAIACQAHAAAAAAAAAF//EAACAAgABwAAAAAAAABf/xAAAgAKAAcAAAAA
+AAAAX/8QAAIAAwAHAAAAAAAAAF//EAACAAYABwAAAAAAAABf/xAAAgAHAAcAAAAAAAAAX/8QAAIA
+BQAHAAAAAAAAAF//EAACAAQABwAAAAAAAAA=
+</rawitemdata></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>f.CfgDataSource</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -426,35 +456,5 @@ AAAAAAAAAAABAAAABgAAAIMEJQCF/wgAAQAACt0GAACt/3H/VgAAAAAAAwAYADQAAAAAAAAAAAAA
 AAAAAAAAAAAAAABBY2Npb25lcyBwb3IgRGVmZWN0byBlbiBGb3JtdWxhcmlvcyBOb3RlcyB8c2Yu
 RGVmQWNjrf9BAA4ACAAAADUAQWNjaW9uZXMgcG9yIERlZmVjdG8gZW4gRm9ybXVsYXJpb3MgTm90
 ZXMgfHNmLkRlZkFjYwAArgLeBgAArgCF/wgAAQAACoECgwQEAIX/CAABAAAK
-</rawitemdata></item>
-<item name='$V5ACTIONS' sign='true'>
-<rawitemdata type='1'>
-vRwRAAAAAQABAAAAAQAAAAAAAAAAAAAACAAAAHn/bAABAOzp2AABAAAAAAAJAAAAAAABAOzp2AAA
-AB8AAAAAAAAAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPz/OgAAAAAAAQAAAAAAAQAAAAAAAAAAAAwAAAAAAAAAAAAA
-AAAAAAAAAAEAAAAAAAAAAAAAAAAAAAC+/2AAAAABAC0AngEBAAUAAAABAAAAQXl1ZGEARAADABYA
-CABkc3BBeXVkYQEAAQAxAAMABwAOAAcACTFTMlMzUwAAABIAAgBeGwAAAAAAAO0BAwAHAAwABQAJ
-MFIxUwBf/xAAAgAMAAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAAAF//EAACAAIABwAAAAAAAABf/xAA
-AgALAAcAAAAAAAAAX/8QAAIAFAAHAAAAAAAAAF//EAACAAkABwAAAAAAAABf/xAAAgAIAAcAAAAA
-AAAAX/8QAAIACgAHAAAAAAAAAF//EAACAAMABwAAAAAAAABf/xAAAgAGAAcAAAAAAAAAX/8QAAIA
-BwAHAAAAAAAAAF//EAACAAUABwAAAAAAAABf/xAAAgAEAAcAAAAAAAAAvv9iAAAAAQAAAJIBEQAI
-AAAAAgAAAENhbmNlbGFyRAADABoACwBTYXZlT3B0aW9ucwABAAEAMAADAAcADAAFAAkxUzNTAAAA
-EgACAPwRAAAAAAAA7QEDAAcACgADAAkwUgD2/y8AAAAAAAMAEwANAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAYWN0X2Nsb3NlLmdpZj9f/xAAAgAMAAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAAAF//EAACAAIA
-BwAAAAAAAABf/xAAAgALAAcAAAAAAAAAX/8QAAIAFAAHAAAAAAAAAF//EAACAAkABwAAAAAAAABf
-/xAAAgAIAAcAAAAAAAAAX/8QAAIACgAHAAAAAAAAAF//EAACAAMABwAAAAAAAABf/xAAAgAGAAcA
-AAAAAAAAX/8QAAIABwAHAAAAAAAAAF//EAACAAUABwAAAAAAAABf/xAAAgAEAAcAAAAAAAAAvv9Y
-AAAAAQAFAI4AAQAGAAAAAwAAAEVkaXRhcjwACAASAAIA6AcAAAAAAADtAQMABwAMAAUACTBTMEUA
-AAASAAIAixMAAAAAAADtAQMABwAKAAMACTBSAF//EAACAAwABwAAAAAAAABf/xAAAgABAAcAAAAA
-AAAAX/8QAAIAAgAHAAAAAAAAAF//EAACAAsABwAAAAAAAABf/xAAAgAUAAcAAAAAAAAAX/8QAAIA
-CQAHAAAAAAAAAF//EAACAAgABwAAAAAAAABf/xAAAgAKAAcAAAAAAAAAX/8QAAIAAwAHAAAAAAAA
-AF//EAACAAYABwAAAAAAAABf/xAAAgAHAAcAAAAAAAAAX/8QAAIABQAHAAAAAAAAAF//EAACAAQA
-BwAAAAAAAAC+/2IAAAABAAAAkgERABAAAAAEAAAAR3VhcmRhciB5IENlcnJhcjwACAASAAIAxgsA
-AAAAAADtAQMABwAMAAUACTBTMEUAAAASAAIA/BEAAAAAAADtAQMABwAKAAMACTBSAPb/NgAAAAAA
-AwATABQAAAAAAAAAAAAAAAAAAAAAAAAAAABhY3Rfc2F2ZWFuZGNsb3NlLmdpZl//EAACAAwABwAA
-AAAAAABf/xAAAgABAAcAAAAAAAAAX/8QAAIAAgAHAAAAAAAAAF//EAACAAsABwAAAAAAAABf/xAA
-AgAUAAcAAAAAAAAAX/8QAAIACQAHAAAAAAAAAF//EAACAAgABwAAAAAAAABf/xAAAgAKAAcAAAAA
-AAAAX/8QAAIAAwAHAAAAAAAAAF//EAACAAYABwAAAAAAAABf/xAAAgAHAAcAAAAAAAAAX/8QAAIA
-BQAHAAAAAAAAAF//EAACAAQABwAAAAAAAAA=
 </rawitemdata></item></note>
 
