Alta usuario fundador

--- a/L8669/Forms/Configuracion.form
+++ b/L8669/Forms/Configuracion.form
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
-<note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.0'
- replicaid='8325819F007B7B18'>
-<noteinfo noteid='1de' unid='F62C59DE8F76AA7D832581A20046F80C' sequence='15'>
+<note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
+ replicaid='832581C400577E0E'>
+<noteinfo noteid='14e' unid='F62C59DE8F76AA7D832581A20046F80C' sequence='15'>
 <created><datetime dst='true'>20170921T105510,20-02</datetime></created>
-<modified><datetime dst='true'>20171005T120733,22-02</datetime></modified>
+<modified><datetime dst='true'>20171025T135542,69-02</datetime></modified>
 <revised><datetime dst='true'>20171005T120733,21-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171005T120733,22-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20170925T112940,48-02</datetime></addedtofile></noteinfo>
+<lastaccessed><datetime dst='true'>20171025T135542,69-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171025T135542,69-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
 <item name='$HTMLCode' sign='true'>
