--- a/L8669/Forms/Configuración de Correlativo.form
+++ b/L8669/Forms/Configuración de Correlativo.form
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
-<note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.0'
- replicaid='8325819F007B7B18'>
-<noteinfo noteid='32e' unid='81286B06CB1B52FA832581A9006E12E4' sequence='20'>
+<note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
+ replicaid='832581C400577E0E'>
+<noteinfo noteid='20a' unid='81286B06CB1B52FA832581A9006E12E4' sequence='20'>
 <created><datetime dst='true'>20170928T180217,96-02</datetime></created>
-<modified><datetime dst='true'>20171005T120733,15-02</datetime></modified>
+<modified><datetime dst='true'>20171025T135543,61-02</datetime></modified>
 <revised><datetime dst='true'>20171005T120733,14-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171005T120733,15-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20170928T180217,98-02</datetime></addedtofile></noteinfo>
+<lastaccessed><datetime dst='true'>20171025T135543,61-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171025T135543,61-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
 <item name='$Comment' sign='true'><text/></item>
