fin del dia ideas para seleccion de menues CRUD

--- a/L8669/Forms/Configuracion.form
+++ b/L8669/Forms/Configuracion.form
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
- replicaid='832581C5007CC52B'>
-<noteinfo noteid='14e' unid='F62C59DE8F76AA7D832581A20046F80C' sequence='15'>
+ replicaid='832581D0005236B2'>
+<noteinfo noteid='14a' unid='F62C59DE8F76AA7D832581A20046F80C' sequence='24'>
 <created><datetime dst='true'>20170921T105510,20-02</datetime></created>
-<modified><datetime dst='true'>20171026T204250,09-02</datetime></modified>
-<revised><datetime dst='true'>20171005T120733,21-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171026T204250,09-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20171026T204250,09-02</datetime></addedtofile></noteinfo>
+<modified><datetime dst='true'>20171106T125800,25-02</datetime></modified>
+<revised><datetime dst='true'>20171101T172911,77-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171106T125800,25-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171106T125800,25-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
 <item name='$HTMLCode' sign='true'>
