--- a/L8669/Pages/Outline.page
+++ b/L8669/Pages/Outline.page
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
- replicaid='832581C5007CC52B'>
-<noteinfo noteid='17e' unid='4F543C532C53A463832581A20046AD8F' sequence='11'>
+ replicaid='832581D0005236B2'>
+<noteinfo noteid='17a' unid='4F543C532C53A463832581A20046AD8F' sequence='20'>
 <created><datetime dst='true'>20170921T105159,51-02</datetime></created>
-<modified><datetime dst='true'>20171026T204250,33-02</datetime></modified>
-<revised><datetime dst='true'>20171005T120733,26-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171026T204250,33-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20171026T204250,33-02</datetime></addedtofile></noteinfo>
-<updatedby><name>CN=ADMINISTRADOR DOMINO/O=SASA</name><name>CN=Notes Standard Control/O=SASA</name></updatedby>
+<modified><datetime dst='true'>20171106T125800,49-02</datetime></modified>
+<revised><datetime dst='true'>20171101T172911,56-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171106T125800,49-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171106T125800,49-02</datetime></addedtofile></noteinfo>
+<updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
 <item name='$Comment' sign='true'><text/></item>
 <item name='$HTMLCode' sign='true'>
