--- a/L8669/Forms/DatosEdificios.form
+++ b/L8669/Forms/DatosEdificios.form
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
  replicaid='832581D800495D1C'>
-<noteinfo noteid='49e' unid='269A61C5FB299787032581E00070CE2C' sequence='3'>
+<noteinfo noteid='49e' unid='269A61C5FB299787032581E00070CE2C' sequence='6'>
 <created><datetime>20171122T173208,12-03</datetime></created>
-<modified><datetime>20171122T175217,98-03</datetime></modified>
-<revised><datetime>20171122T175217,97-03</datetime></revised>
-<lastaccessed><datetime>20171122T175217,97-03</datetime></lastaccessed>
+<modified><datetime dst='true'>20171218T141737,00-02</datetime></modified>
+<revised><datetime dst='true'>20171218T141736,99-02</datetime></revised>
+<lastaccessed><datetime dst='true'>20171218T141736,99-02</datetime></lastaccessed>
 <addedtofile><datetime>20171122T173208,40-03</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
@@ -14,22 +14,20 @@
 <rawitemdata type='1'>
 X/8QAAIADwAHAAAAAAAAAA==
 </rawitemdata></item>
-<item name='$TITLE'><textlist><text>DatosEdificios</text><text>f.DatosEdificios</text></textlist></item>
 <item name='$INFO' sign='true'>
 <rawitemdata type='1'>
 hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 </rawitemdata></item>
 <item name='$Flags'><text/></item>
-<item name='$XPageAlt'><text>frmEdificios.xsp</text></item>
-<item name='$DesignerVersion'><text>8.5.3</text></item>
+<item name='$XPageAlt' sign='true'><text>frmEdificios.xsp</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>f.DatosEdificios</text></item>
-<item name='edificio_codigoSasa' placeholder='true'>
+<item name='edf_codigoSasa' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
-<item name='edificio_codigoPropio' placeholder='true'>
+<item name='edf_codigoPropio' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
-<item name='$FIELDS'><textlist><text>edificio_codigoPropio</text><text>edificio_codigoSasa</text></textlist></item>
+<item name='$FIELDS'><textlist><text>edf_codigoPropio</text><text>edf_codigoSasa</text></textlist></item>
 <item name='$BODY' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -43,22 +41,25 @@ AAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAAAAAAAAAAAAABAAAABAAAAIMEAwCF/xIAAQAACkNv
 ZGlnb1Nhc2GkEgABLRVnLAAAVQIREQEBAACBAoL/WgAEAAAAAAAAAAAAPBVnLDwVAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAAAAAAAAAAAAABAAAA
 BAAAAIMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv84AIIAAAUAMAIA
-AAAAAAACAQAACgAAAAAAAAAAEwAAAAAAZWRpZmljaW9fY29kaWdvU2FzYQBiDgEAhAAAAAAAAAAA
-AN4GAACK/4X/CAABAAAKpBIBAKAFLRUAAFUCEREBAQAAgQKDBAMAhf8UAAEAAApDb2RpZ29Qcm9w
-aW+kEgEBLRVnLAAAVQIREQEBAACBAoMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAiv86AIIAAAUAMAIAAAAAAAACAQAACgAAAAAAAAAAFQAAAAAAZWRpZmljaW9fY29kaWdv
-UHJvcGlvAGIOAQCEAAAAAAAAAAAA3gYAAIr/hf8IAAEAAAqkEgIAoAUtFQAAVQIREQEBAACBAoME
-AwCF/xEAAQAACkRpcmVjY2lvbgCkEgIBLRVnLAAAVQIREQEBAACBAoMEBACF/wgAAQAACqQSAwCg
-BS0VAABVAhERAQEAAIECgwQDAIX/EQABAAAKTG9jYWxpZGFkAKQSAwEtFWcsAABVAhERAQEAAIEC
-gwQEAIX/CAABAAAKpBIEAKAFLRUAAFUCEREBAQAAgQKDBAMAhf8VAAEAAApBZG1pbmlzdHJhZG9y
-AKQSBAEtFWcsAABVAhERAQEAAIECgwQEAIX/CAABAAAKpBIFAKAFLRUAAFUCEREBAQAAgQKDBAMA
-hf8MAAEAAApDVUlUpBIFAS0VZywAAFUCEREBAQAAgQKDBAQAhf8IAAEAAAqkEgYAoAUtFQAAVQIR
-EQEBAACBAoMEAwCF/wgAAQAACqQSBgEtFWcsAABVAhERAQEAAIECgwQEAIX/CAABAAAKpBIHAKAF
-LRUAAFUCEREBAQAAgQKDBAMAhf8IAAEAAAqkEgcBLRVnLAAAVQIREQEBAACBAoMEBACF/wgAAQAA
-CqQSCACgBS0VAABVAhERAQEAAIECgwQDAIX/CAABAAAKpBIIAS0VZywAAFUCEREBAQAAgQKDBAQA
-hf8IAAEAAAqkEgkAoAUtFQAAVQIREQEBAACBAoMEAwCF/wgAAQAACqQSCQEtFWcsAABVAhERAQEA
-AIECgwQEAIX/CAABAAAKpQYAAAAAgQKDBAEAhf8IAAEAAAo=
-</rawitemdata></item></note>
+AAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv8yAIIAAAUAMAIA
+AAAAAAACAQAACgAAAAAAAAAADgAAAAAAZWRmX2NvZGlnb1Nhc2FiDgEAhAAAAAAAAAAAAN4GAACK
+/4X/CAABAAAKpBIBAKAFLRUAAFUCEREBAQAAgQKDBAMAhf8UAAEAAApDb2RpZ29Qcm9waW+kEgEB
+LRVnLAAAVQIREQEBAACBAoMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+iv80AIIAAAUAMAIAAAAAAAACAQAACgAAAAAAAAAAEAAAAAAAZWRmX2NvZGlnb1Byb3Bpb2IOAQCE
+AAAAAAAAAAAA3gYAAIr/hf8IAAEAAAqkEgIAoAUtFQAAVQIREQEBAACBAoMEAwCF/xEAAQAACkRp
+cmVjY2lvbgCkEgIBLRVnLAAAVQIREQEBAACBAoMEBACF/wgAAQAACqQSAwCgBS0VAABVAhERAQEA
+AIECgwQDAIX/EQABAAAKTG9jYWxpZGFkAKQSAwEtFWcsAABVAhERAQEAAIECgwQEAIX/CAABAAAK
+pBIEAKAFLRUAAFUCEREBAQAAgQKDBAMAhf8VAAEAAApBZG1pbmlzdHJhZG9yAKQSBAEtFWcsAABV
+AhERAQEAAIECgwQEAIX/CAABAAAKpBIFAKAFLRUAAFUCEREBAQAAgQKDBAMAhf8MAAEAAApDVUlU
+pBIFAS0VZywAAFUCEREBAQAAgQKDBAQAhf8IAAEAAAqkEgYAoAUtFQAAVQIREQEBAACBAoMEAwCF
+/wgAAQAACqQSBgEtFWcsAABVAhERAQEAAIECgwQEAIX/CAABAAAKpBIHAKAFLRUAAFUCEREBAQAA
+gQKDBAMAhf8IAAEAAAqkEgcBLRVnLAAAVQIREQEBAACBAoMEBACF/wgAAQAACqQSCACgBS0VAABV
+AhERAQEAAIECgwQDAIX/CAABAAAKpBIIAS0VZywAAFUCEREBAQAAgQKDBAQAhf8IAAEAAAqkEgkA
+oAUtFQAAVQIREQEBAACBAoMEAwCF/wgAAQAACqQSCQEtFWcsAABVAhERAQEAAIECgwQEAIX/CAAB
+AAAKpQYAAAAAgQKDBAEAhf8IAAEAAAo=
+</rawitemdata></item>
+<item name='$TITLE' sign='true'><textlist><text>DatosEdificios</text><text
+>f.EdfDatos</text></textlist></item>
+<item name='$DesignerVersion' sign='true'><text>8.5.3</text></item></note>
 
