--- a/L8669/Forms/DatosEdificios.form
+++ b/L8669/Forms/DatosEdificios.form
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
- replicaid='832581D800495D1C'>
-<noteinfo noteid='49e' unid='269A61C5FB299787032581E00070CE2C' sequence='9'>
+ replicaid='83258203004F19D9'>
+<noteinfo noteid='3c2' unid='269A61C5FB299787032581E00070CE2C' sequence='9'>
 <created><datetime>20171122T173208,12-03</datetime></created>
-<modified><datetime dst='true'>20171218T183709,29-02</datetime></modified>
+<modified><datetime dst='true'>20171227T122402,99-02</datetime></modified>
 <revised><datetime dst='true'>20171218T183709,24-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171218T183709,28-02</datetime></lastaccessed>
-<addedtofile><datetime>20171122T173208,40-03</datetime></addedtofile></noteinfo>
+<lastaccessed><datetime dst='true'>20171227T122402,99-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171227T122402,99-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
 <item name='$Comment' sign='true'><text/></item>
