--- a/L8669/Forms/Configuración de Correlativo.form
+++ b/L8669/Forms/Configuración de Correlativo.form
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
- replicaid='832581D800495D1C'>
-<noteinfo noteid='1f2' unid='81286B06CB1B52FA832581A9006E12E4' sequence='32'>
+ replicaid='83258203004F19D9'>
+<noteinfo noteid='1e6' unid='81286B06CB1B52FA832581A9006E12E4' sequence='32'>
 <created><datetime dst='true'>20170928T180217,96-02</datetime></created>
-<modified><datetime dst='true'>20171114T112324,45-02</datetime></modified>
+<modified><datetime dst='true'>20171227T122400,91-02</datetime></modified>
 <revised><datetime dst='true'>20171114T112324,44-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20171114T112324,45-02</datetime></lastaccessed>
-<addedtofile><datetime dst='true'>20171114T112121,19-02</datetime></addedtofile></noteinfo>
+<lastaccessed><datetime dst='true'>20171227T122400,91-02</datetime></lastaccessed>
+<addedtofile><datetime dst='true'>20171227T122400,91-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
 <item name='$Comment' sign='true'><text/></item>
