Estos archivos tienen cambios de fechas por el Error al cargar el modulo dojo del servidor. Se vuelve a una version anterior

--- a/L8669/Forms/DatosAdministrador.form
+++ b/L8669/Forms/DatosAdministrador.form
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' maintenanceversion='1.9'
  replicaid='83258203004F19D9'>
-<noteinfo noteid='3a2' unid='8462CB7397FDF32D032581D9006D564A' sequence='15'>
+<noteinfo noteid='3a2' unid='8462CB7397FDF32D032581D9006D564A' sequence='20'>
 <created><datetime>20171115T165415,14-03</datetime></created>
-<modified><datetime dst='true'>20180220T180559,50-02</datetime></modified>
-<revised><datetime dst='true'>20180220T180559,49-02</datetime></revised>
-<lastaccessed><datetime dst='true'>20180220T180559,50-02</datetime></lastaccessed>
+<modified><datetime dst='true'>20180227T111011,44-02</datetime></modified>
+<revised><datetime>20171127T151510,76-03</datetime></revised>
+<lastaccessed><datetime dst='true'>20180227T111011,44-02</datetime></lastaccessed>
 <addedtofile><datetime dst='true'>20171227T122402,83-02</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Notes Standard Control/O=SASA</name></updatedby>
 <wassignedby><name>CN=Notes Standard Control/O=SASA</name></wassignedby>
