Cambio de Botones para el TitleBar en vez del PlaceBar

--- a/L8669/Resources/StyleSheets/affixPlaceBar.css
+++ b/L8669/Resources/StyleSheets/affixPlaceBar.css
@@ -3,3 +3,8 @@
     right: 20px;
     z-index: 99999;
 }
+.xsp .navbar.applayout-titlebar {
+	position: fixed;
+    right: 20px;
+    z-index: 99999;
+}
